# human-grounding

./: .env-template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  canvas.html  justfile  pyproject.toml  ruff.toml
output/: alignment_results.csv  alignment_results_gov-ai.csv  alignment_results_gov-ai_policy.csv  alignment_results_policy.csv  alignment_summary_gov-ai_policy.txt  alpha_data_demographic.csv  alpha_data_gov-ai_demographic.csv  alpha_data_policy_demographic.csv  appendix_triplets.tex  auc_axis_comparison.csv  auc_sensitivity_table.tex  canonical_values_report.md  cluster_consistency_aggregated_gov-ai.csv  cluster_consistency_aggregated_gov-ai_silhouette.csv  cluster_consistency_aggregated_policy.csv  cluster_consistency_aggregated_policy_silhouette.csv  cluster_spearman_by_experiment.csv  difficulty_split_gov-ai.csv  difficulty_split_gov-ai_policy.csv  difficulty_split_policy.csv  embedding_alignment_auc.csv  fairness_group_gap_controlled.tex  fairness_group_gap_tests.tex  fairness_triplet_counts.tex  human_alignment_bootstrapped.csv  human_alignment_bootstrapped_gov-ai.csv  human_alignment_bootstrapped_policy.csv  human_cluster_consistency_gov-ai.csv  human_cluster_consistency_gov-ai_silhouette.csv  human_cluster_consistency_policy.csv  human_cluster_consistency_policy_silhouette.csv  instruct_prompt_context_auc.csv  instruct_prompt_robustness_auc.csv  k_sensitivity_table.tex  key-values.tex  lexical_baselines_report.md  lexical_baselines_table.tex  mmteb-top-dan.csv  mmteb_with_ranks.csv  mmteb_with_ranks_policy.csv  (+8 more)
(+41 files in other folders)
